# rust_paystack

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  payment.rs
