[package]
name = "rust_paystack"
version = "0.1.4"
authors = ["Abukari Einus"]
edition = "2021"
license = "MIT"
description = "A Rust library for interacting with the Paystack API"
documentation = "https://docs.rs/rust_paystack"
homepage = "https://github.com/blackdante101/rust_paystack"
repository = "https://github.com/blackdante101/rust_paystack"

keywords = ["paystack", "payment", "api", "rust"]
categories = ["api-bindings", "finance", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
